feat: adding feature make complete
adding feature make incomplete
